# tutorial_geocompy

./: .pyproject.toml.swp  01_geographic.ipynb  02_attribute.ipynb  03_spatial.ipynb  04_geometry.ipynb  README.md  main.py  pyproject.toml  tutorial_geocompy_01.ipynb  workshop_pysheds.ipynb
data_pysheds/soils/: soils.xml
