[project]
name = "pj-gpd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pysheds>=0.5",
    "rasterio>=1.4.3",
    "shapely>=2.1.2",
    "topojson>=1.10",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
